self-contained build in Dockerfile